# URDF-testbot

./: .gitignore
build_isolated/: catkin_make_isolated.cache
build_isolated/description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/description/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/description/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/description/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/description/: CMakeLists.txt  package.xml
src/description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  simple_robot_display.launch
src/description/meshes/: motor_planetary_p2_v1_1.stl  motor_planetary_p2_v1_2.stl  motor_planetary_p2_v1_3.stl  motor_planetary_p2_v1_4.stl
src/description/urdf/: output.urdf  simple_robot.urdf  testbot.gazebo  testbot.gv  testbot.trans  testbot.xacro
src/keyboard/: CMakeLists.txt  package.xml  setup.py
src/keyboard/launch/: keyboard.launch
src/keyboard/src/keyboard/: keyboard.py
src/testbot25_description/: CMakeLists.txt  package.xml  rostopic pub -1 testbot25Revolute_1.txt
src/testbot25_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/testbot25_description/meshes/: motor_planetary_p2_v2_1.stl  motor_planetary_p2_v2__1__1.stl  motor_planetary_p2_v2__2__1.stl  (+2 more)
(+18 files in other folders)
